--- a/angular.json
+++ b/angular.json
@@ -136,5 +136,10 @@
       }
     }
   },
-  "defaultProject": "teachers"
+  "defaultProject": "teachers",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
